1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Begin revision log.
