@@ -1,0 +1,3 @@
+noinst_DATA = collectionsrevhistory.sgml
+
+include $(top_srcdir)/Makefile.rules
